// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectRecipient > should render disabled 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sr-only sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              autocomplete="off"
              class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 ring-0 transition-all duration-100 border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700"
                  />
                </div>
                <div
                  class="flex relative flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    autocomplete="off"
                    class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none sm:text-base! cursor-default text-theme-secondary-text"
                    data-testid="SelectDropdown__input"
                    disabled=""
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div>
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="user"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="5"
                                r="4"
                              />
                              <path
                                d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient > should render empty 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sr-only sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              autocomplete="off"
              class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 ring-0 transition-all duration-100 border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700"
                  />
                </div>
                <div
                  class="flex relative flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    autocomplete="off"
                    class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base! cursor-default"
                    data-testid="SelectDropdown__input"
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center p-1 bg-transparent rounded transition-colors cursor-pointer text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-700"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div>
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="user"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="5"
                                r="4"
                              />
                              <path
                                d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient > should render invalid 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sr-only sm:h-14 focus-within:ring-1 text-theme-text border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              aria-invalid="true"
              autocomplete="off"
              class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value=""
            />
          </div>
          <div
            class="flex items-center divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
            data-testid="Input__addon-end"
          >
            <span
              data-testid="Input__error"
            >
              <div
                class="text-theme-danger-500"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="circle-exclamation-mark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 ring-0 transition-all duration-100 border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700"
                  />
                </div>
                <div
                  class="flex relative flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-invalid="true"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    autocomplete="off"
                    class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base! cursor-default"
                    data-testid="SelectDropdown__input"
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="flex items-center divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
                  data-testid="Input__addon-end"
                >
                  <span
                    data-testid="Input__error"
                  >
                    <div
                      class="pr-3 text-theme-danger-500"
                    >
                      <div
                        style="height: 20px; width: 20px;"
                      >
                        <svg
                          id="circle-exclamation-mark"
                          style="height: 100%; width: 100%;"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-width="2"
                          >
                            <circle
                              cx="10"
                              cy="10"
                              r="9"
                              stroke-miterlimit="10"
                            />
                            <path
                              d="M10 10.5v-5"
                              stroke-linecap="round"
                              stroke-miterlimit="10"
                            />
                            <path
                              d="M10 14h0"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </span>
                  <div
                    class="pl-3"
                  >
                    <div
                      class="flex items-center p-1 bg-transparent rounded transition-colors cursor-pointer text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-700"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div>
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="user"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="5"
                                r="4"
                              />
                              <path
                                d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectRecipient > should update internal state when prop changes 1`] = `
<div>
  <div>
    <div
      class="flex relative items-center w-full text-left"
      data-testid="SelectRecipient__wrapper"
    >
      <div
        class="relative w-full"
        data-testid="SelectDropdown"
      >
        <div
          class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sr-only sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
        >
          <div
            class="flex relative flex-1 h-full"
          >
            <input
              autocomplete="off"
              class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
              data-testid="select-list__input"
              readonly=""
              tabindex="-1"
              type="text"
              value="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
            />
          </div>
        </div>
        <div
          class="w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="SelectRecipient__dropdown-menu"
            role="combobox"
          >
            <div>
              <label
                for="SelectRecipient__dropdown-input"
                id="SelectRecipient__dropdown-label"
              />
              <div
                class="fixed invisible w-auto whitespace-nowrap"
              >
                0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                …
              </div>
              <div
                class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded transition-all duration-100 shrink-0"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
                    >
                      <img
                        alt="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                        src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                        title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="flex relative flex-1 h-full"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="SelectRecipient__dropdown-menu"
                    aria-labelledby="SelectRecipient__dropdown-label"
                    autocomplete="off"
                    class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
                    data-testid="SelectDropdown__input"
                    id="SelectRecipient__dropdown-input"
                    placeholder="Address"
                    type="text"
                    value="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                  />
                  <span
                    class="flex absolute inset-y-0 items-center w-full text-sm font-normal opacity-50 pointer-events-none sm:text-base no-ligatures"
                    data-testid="Input__suggestion"
                  >
                    <span
                      class="truncate"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </span>
                </div>
                <div
                  class="flex items-center divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
                  data-testid="Input__addon-end"
                >
                  <div
                    class=""
                  >
                    <div
                      class="flex items-center p-1 bg-transparent rounded transition-colors cursor-pointer text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-700"
                      data-testid="SelectRecipient__select-recipient"
                    >
                      <div>
                        <div
                          style="height: 20px; width: 20px;"
                        >
                          <svg
                            id="user"
                            style="height: 100%; width: 100%;"
                            viewBox="0 0 20 20"
                            x="0"
                            xml:space="preserve"
                            xmlns="http://www.w3.org/2000/svg"
                            y="0"
                          >
                            <g
                              fill="none"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                            >
                              <circle
                                cx="10"
                                cy="5"
                                r="4"
                              />
                              <path
                                d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                              />
                            </g>
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="SelectRecipient__dropdown-label"
              id="SelectRecipient__dropdown-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
